complete task 2 add refresh
